--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "canvas": "^2.6.1",
+    "app-root-path": "^3.0.0",
     "commander": "^4.1.1",
     "date-fns": "^2.10.0",
     "got": "^10.6.0",
     "kleur": "^3.0.3",
+    "pdfkit": "^0.11.0",
     "ramda": "^0.27.0"
   }
 }
