--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "date-fns": "^2.10.0",
     "got": "^10.6.0",
     "kleur": "^3.0.3",
+    "p-each-series": "^2.1.0",
+    "p-queue": "^6.3.0",
+    "p-times": "^2.1.0",
     "pdfkit": "^0.11.0",
     "ramda": "^0.27.0"
   }
